--- a/HandballResults/HandballResults/HandballResults.csproj
+++ b/HandballResults/HandballResults/HandballResults.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Controllers\GroupController.cs" />
     <Compile Include="Controllers\GamesController.cs" />
     <Compile Include="Controllers\TeamsController.cs" />
+    <Compile Include="Models\Team.cs" />
     <Compile Include="Models\TeamsViewModel.cs" />
     <Compile Include="Models\GroupViewModel.cs" />
     <Compile Include="Models\GamesViewModel.cs" />
