--- a/HandballResults/HandballResults/HandballResults.csproj
+++ b/HandballResults/HandballResults/HandballResults.csproj
@@ -169,6 +169,7 @@
     <Content Include="Content\Site.css" />
     <None Include="Properties\PublishProfiles\handball-results - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
+    <Content Include="Scripts\games-module.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
     <Content Include="Scripts\jquery-3.3.1.slim.js" />
