exclude unwanted teams

--- a/HandballResults/HandballResults/Web.config
+++ b/HandballResults/HandballResults/Web.config
@@ -4,16 +4,22 @@
   https://go.microsoft.com/fwlink/?LinkId=301880
   -->
 <configuration>
+  <configSections>
+    <section name="handballResults" type="HandballResults.Config.HandballResultsConfigsSection"/>
+  </configSections>
+
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
   </system.web>
+
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -50,16 +56,42 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+
   <system.webServer>
     <modules>
       <remove name="TelemetryCorrelationHttpModule" />
       <add name="TelemetryCorrelationHttpModule" type="Microsoft.AspNet.TelemetryCorrelation.TelemetryCorrelationHttpModule, Microsoft.AspNet.TelemetryCorrelation" preCondition="integratedMode,managedHandler" />
     </modules>
   </system.webServer>
+
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701" />
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
+
+  <handballResults>
+    <excludedTeams>
+      <team id="29608"></team>
+      <team id="29704"></team>
+      <team id="29645"></team>
+      <team id="29466"></team>
+      <team id="29795"></team>
+      <team id="29750"></team>
+      <team id="29646"></team>
+      <team id="29648"></team>
+      <team id="29610"></team>
+      <team id="29650"></team>
+      <team id="29768"></team>
+      <team id="29643"></team>
+      <team id="30299"></team>
+      <team id="29469"></team>
+      <team id="29470"></team>
+      <team id="29916"></team>
+      <team id="29767"></team>
+      <team id="29884"></team>
+    </excludedTeams>
+  </handballResults>
+
 </configuration>
