--- a/HandballResults/HandballResults/HandballResults.csproj
+++ b/HandballResults/HandballResults/HandballResults.csproj
@@ -140,6 +140,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\UnityConfig.cs" />
     <Compile Include="App_Start\UnityMvcActivator.cs" />
+    <Compile Include="Config\HandballResultsConfig.cs" />
     <Compile Include="Controllers\GroupController.cs" />
     <Compile Include="Controllers\GamesController.cs" />
     <Compile Include="Controllers\TeamsController.cs" />
