--- a/HandballResults/HandballResults/HandballResults.csproj
+++ b/HandballResults/HandballResults/HandballResults.csproj
@@ -168,7 +168,7 @@
     <Content Include="favicon.ico" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
-    <None Include="Properties\PublishProfiles\handball-results - Web Deploy.pubxml" />
+    <None Include="Properties\PublishProfiles\hcdu-results - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\games-module.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
