--- a/HandballResults/HandballResults.csproj
+++ b/HandballResults/HandballResults.csproj
@@ -156,6 +156,7 @@
     <Compile Include="Controllers\GroupController.cs" />
     <Compile Include="Controllers\GamesController.cs" />
     <Compile Include="Controllers\TeamsController.cs" />
+    <Compile Include="Models\SortOrder.cs" />
     <Compile Include="Models\Team.cs" />
     <Compile Include="Models\TeamsViewModel.cs" />
     <Compile Include="Models\GroupViewModel.cs" />
