--- a/HandballResults/HandballResults.csproj
+++ b/HandballResults/HandballResults.csproj
@@ -23,7 +23,7 @@
 	  <Folder Include="ClientApp\src\fonts\" />
 	</ItemGroup>
 
-	<Target Name="NpmInstall" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(MpaRoot)node_modules') ">
+	<Target Name="NpmInstall" BeforeTargets="Build" Condition="!Exists('$(MpaRoot)node_modules') ">
 		<!-- Ensure Node.js is installed -->
 		<Exec Command="node --version" ContinueOnError="true">
 			<Output TaskParameter="ExitCode" PropertyName="ErrorCode" />
