--- a/HandballResults/HandballResults.csproj
+++ b/HandballResults/HandballResults.csproj
@@ -62,4 +62,12 @@
 
 	</Target>
 
+	<ItemGroup>
+	  <UpToDateCheckInput Remove="Views\Home\Index.cshtml" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <_ContentIncludedByDefault Remove="Views\Home\Index.cshtml" />
+	</ItemGroup>
+
 </Project>
